# de_zoomcamp

./: .gitignore  pyproject.toml
module_1/: homework.md  summary.md
module_1/1_run_docker/: Dockerfile  pipeline.py
module_1/2_postgres_locally/: Dockerfile  adding_zones.ipynb  data_inserting.ipynb  data_inserting.py  docker-compose.yaml
module_2/: docker-compose.yaml  homework_queries.sql
module_2/flows/: postgres_taxi.yaml
module_3/: homework.sql
module_4/: Dockerfile  data_load_with_dlt.ipynb  docker-compose.yml
module_5/: homework.ipynb  spark.ipynb
workshop_dlt/: etl_process.ipynb  ny_taxi_pipeline.duckdb
zoomcamp/: dbt_project.yml  packages.yml
zoomcamp/models/core/: dm_monthly_zone_revenue.sql  fact_trips.sql  fct_taxi_trips_quarterly_revenue.sql  schema.yml
zoomcamp/models/staging/: schema.yml  stg_green_tripdata.sql  stg_yellow_tripdata.sql
