[project]
name = "de-zoomcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "timosii",email = "tsimashev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "google (>=3.0.0,<4.0.0)",
    "dbt-core (>=1.9.2,<2.0.0)",
    "dbt-postgres (>=1.9.0,<2.0.0)",
    "pyspark (>=3.5.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
